--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* general page style */
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,6 +10,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header style */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,6 +44,7 @@ header nav ul li {
     margin-left: 25px;
 }
 
+/* text styles */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -50,6 +54,7 @@ p {
     font-size: 16px;
 }
 
+/* div hero background image */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +64,7 @@ p {
     background-position: center;
 }
 
+/* floats */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,12 +75,14 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/* main */
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* benefits section styles */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,6 +142,7 @@ p {
     max-width: 150px;
 }
 
+/* service benefits section styles */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -188,6 +197,7 @@ p {
     font-size: 36px;
 }
 
+/* footer section style */
 .footer {
     padding: 30px;
     clear: both;
