--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ main {
 }
 
 /* service benefits section styles */
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.service {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -120,7 +120,7 @@ main {
     color: #ffffff;
 }
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+.service img {
     max-height: 200px;
 }
 
